@@ -64,8 +64,10 @@ Changes
     SELECT id FROM t2
 
 - Added new "password" authentication method which is available for connections
-  via the Postgres Protocol. This method allows clients to authenticate using
-  a valid database user and its password.
+  via the Postgres Protocol and HTTP. This method allows clients to authenticate
+  using a valid database user and its password. For HTTP the ``X-User`` header,
+  used to provide a username, has been deprecated in favor of the the standard
+  HTTP Authorization header with the Basic Authentication Scheme.
 
 - Added ``WITH`` clause to ``CREATE USER`` statement to specify user properties
   upon creation. The single property available right now is the ``password``
